modifique por el metodo getFirst, y actualice la cantidad de usuario en la tabla